# gps_goal

./: .gitignore  CMakeLists.txt  README.md  package.xml
gps_goal/: CMakeLists.txt  package.xml
gps_goal_msgs/: CMakeLists.txt  package.xml
gps_goal_server/: CHANGELOG.rst  CMakeLists.txt  setup.py
gps_goal_server/launch/: gps_goal.launch
gps_goal_server/nodes/: gps_goal
gps_goal_server/src/gps_goal/: gps_goal.py
launch/: gps_goal.launch  initialize_origin.launch
nodes/: gps_goal
src/gps_goal/: gps_goal.py  stitch_loop.py
srv/: decDegreesToPose.srv
