<package>
  <name>gps_goal</name>
  <version>0.1.0</version>
  <description>
      Create panoramas in ROS using image snapshots or multiple video streams.
  </description>
  <maintainer email="danielsnider12@gmail.com">Daniel Snider</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/gps_goal</url>
  <url type="repository">https://github.com/danielsnider/gps_goal</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>hugin-tools</run_depend>
  <run_depend>enblend</run_depend>
  <run_depend>imagemagick</run_depend>

</package>
