<package>
  <name>gps_goal</name>
  <version>0.1.0</version>
  <description>
      Set a ROS navigation goal using latitude and longitude.
  </description>
  <maintainer email="danielsnider12@gmail.com">Daniel Snider</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/gps_goal</url>
  <url type="repository">https://github.com/danielsnider/gps_goal</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>python-geographiclib</run_depend>
  <run_depend>click</run_depend>

</package>
